devops/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crypto-radar
  labels:
    app.kubernetes.io/part-of: projectr-x
